[package]
name = "io_uring_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
httparse = "1.10.1"
io-uring = "0.7.7"
ktls = "6.0.2"
libc = "0.2.172"
log = "0.4.27"
rustls = "0.23.27"
simple_logger = "5.0.0"
tokio = { version = "1.45.1", features = ["net", "rt", "time"] }
tokio-rustls = "0.26.2"
